NXP-33599: Code cleanup and modernization